# llm_conversion_framework

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Leitfaden für Modulentwickler  Makefile  README.md  README.md.txt  README_DE.md  Readme-en.md  entrypoint.sh  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ethicalcheck.yml  security.yml  tests.yml
Docker Setup/: docker-compose.yml  pyproject.toml
configs/: SSOT_ARCHITECTURE.md  detailed_project_sources.yml  project_sources.md  project_sources.yml
docs/: CLI_Anleitung.md  CLI_Usage_EN.md  Leitfaden für Modulentwickler  Leitfaden für Modulentwickler_DE.md  Module_Developer_Guide_EN.md  features_deep_dive.md
orchestrator/: cli.py  main.py  orchestrator.py
orchestrator/Core/: builder - Kopie.py  builder.py  community_manager.py  config_manager.py  consistency_manager.py  crawler_manager.py  dataset_manager.py  deployment_manager.py  ditto_manager.py  docker_manager.py  fix_poetry_venv.py  fix_readme.txt  framework - Kopie.py  framework.py  model_manager.py  module_generator.py  orchestrator.py  rag_manager.py  secrets_manager.py  self_healing_manager.py  target_manager.py
orchestrator/core/: orchestrator.py
orchestrator/gui/: __init__.py  benchmark_window.py  builder_tab.py  chat_window.py  community_hub.py  deployment_window.py  dialogs.py  huggingface_window.py  main_window.py  wizards.py
orchestrator/utils/: __init__.py  helpers.py  localization.py  logging.py  network.py  telemetry.py  updater.py  validation.py
scripts/: Launch-LLM-Conversion-Framework.bat  Uninstall-LLM-Conversion-Framework.bat  build_launcher.py  build_setup_exe.py  build_windows_exe.py  ci_image_audit.sh  hardware_probe.ps1  hardware_probe.sh  install.bat  install.sh  quick_smoke_test.py  setup_linux.sh  setup_windows.py  start-llm_convertion_framework.bat  sync_ssot.py  validate_ssot.py
targets/Rockchip/: dockerfile  target.yml
targets/Rockchip/modules/: build.sh  config_module.sh  convert_module.sh  how2.txt  rkllm_module.sh  rknn_module.sh  source_module.sh  target_module.sh
targets/Rockchip/scripts/: export_rkllm.py  rknn_converter.py
targets/_template/: Dockerfile  Dockerfile.gpu  target.yml
targets/_template/modules/: benchmark_module.sh  build.sh  config_module.sh  convert_module.sh  rkllm_module.sh  rknn_module.sh  source_module.sh  target_module.sh
targets/_template/scripts/: export_rkllm.py
tests/: test_core.py
