[tool.poetry]
name = "llm-conversion-framework"
version = "1.3.0"
description = "Universal LLM Cross-Compiler for Edge Hardware (Rockchip, NVIDIA, etc.)"
authors = ["Smilez1985 <contact@framework.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "orchestrator"}]

[tool.poetry.dependencies]
python = "^3.10"
docker = "^7.0.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
pyside6 = "^6.6.0"
huggingface-hub = "^0.20.0"
# NEU: F端r Ditto AI Agent
litellm = "^1.0.0"
# NEU: F端r CLI Output
rich = "^13.7.0"
# NEU: F端r Hardware Probe Helper
psutil = "^5.9.0"
# NEU: F端r Secrets Management (AES-256 Encryption)
cryptography = "^41.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.0.0"
flake8 = "^7.0.0"
bandit = "^1.7.0"
safety = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llm-cli = "orchestrator.cli:cli"
llm-gui = "orchestrator.main:main"
